deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    app: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: 120653558546.dkr.ecr.ap-northeast-2.amazonaws.com/zzzcolcol/test:latest
        ports:
        - containerPort: 8080
